feat: persist shipping addresses
